{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 91,
  "lineage": "97bd4c25-3d97-618e-b719-b33c662a23cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:458113071697:instance/i-03cf716b8ac3fb155",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03cf716b8ac3fb155",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06615d2d3071ad137"
              }
            ],
            "primary_network_interface_id": "eni-06615d2d3071ad137",
            "private_dns": "ip-10-0-1-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "public_dns": "ec2-3-83-135-224.compute-1.amazonaws.com",
            "public_ip": "3.83.135.224",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0de41329b9913e867",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07435f69960fb2a93",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a36b16341d892b45"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458113071697",
            "id": "i-03cf716b8ac3fb155",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.jenkins_master",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:458113071697:instance/i-0894f71180e29ee45",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0894f71180e29ee45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08274cc98da494019"
              }
            ],
            "primary_network_interface_id": "eni-08274cc98da494019",
            "private_dns": "ip-10-0-1-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-3-87-232-220.compute-1.amazonaws.com",
            "public_ip": "3.87.232.220",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-090bb9b35566ba1fe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07435f69960fb2a93",
            "tags": {
              "Name": "jenkins-slave"
            },
            "tags_all": {
              "Name": "jenkins-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06cd75a618c28236a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458113071697",
            "id": "i-0894f71180e29ee45",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.jenkins_slave",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458113071697:internet-gateway/igw-01d2c8e5e8553f4e5",
            "id": "igw-01d2c8e5e8553f4e5",
            "owner_id": "458113071697",
            "region": "us-east-1",
            "tags": {
              "Name": "jenkins-igw"
            },
            "tags_all": {
              "Name": "jenkins-igw"
            },
            "vpc_id": "vpc-0e66ae8fb6b067ff5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458113071697:route-table/rtb-0f32009c9fbc0638c",
            "id": "rtb-0f32009c9fbc0638c",
            "owner_id": "458113071697",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d2c8e5e8553f4e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-route-table"
            },
            "tags_all": {
              "Name": "jenkins-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e66ae8fb6b067ff5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458113071697",
            "id": "rtb-0f32009c9fbc0638c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0477565ca34d072af",
            "region": "us-east-1",
            "route_table_id": "rtb-0f32009c9fbc0638c",
            "subnet_id": "subnet-07435f69960fb2a93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458113071697:security-group/sg-0a36b16341d892b45",
            "description": "Security group for Jenkins master",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a36b16341d892b45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-master-sg",
            "name_prefix": "",
            "owner_id": "458113071697",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-master-sg"
            },
            "tags_all": {
              "Name": "jenkins-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e66ae8fb6b067ff5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458113071697",
            "id": "sg-0a36b16341d892b45",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458113071697:security-group/sg-06cd75a618c28236a",
            "description": "Security group for Jenkins slave",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cd75a618c28236a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jenkins-slave-sg",
            "name_prefix": "",
            "owner_id": "458113071697",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-slave-sg"
            },
            "tags_all": {
              "Name": "jenkins-slave-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e66ae8fb6b067ff5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458113071697",
            "id": "sg-06cd75a618c28236a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458113071697:subnet/subnet-07435f69960fb2a93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07435f69960fb2a93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458113071697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jenkins-subnet"
            },
            "tags_all": {
              "Name": "jenkins-subnet"
            },
            "vpc_id": "vpc-0e66ae8fb6b067ff5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458113071697",
            "id": "subnet-07435f69960fb2a93",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458113071697:vpc/vpc-0e66ae8fb6b067ff5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d2dfa57e7b72d09",
            "default_route_table_id": "rtb-0d9f9dd81608af1c6",
            "default_security_group_id": "sg-0450072b418aae90f",
            "dhcp_options_id": "dopt-c27fc1b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e66ae8fb6b067ff5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d9f9dd81608af1c6",
            "owner_id": "458113071697",
            "region": "us-east-1",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}